# rustos

./: .gitignore  Cargo.toml  rustfmt.toml  rusty-tags.vi  x86_64-rustos.json
.cargo/: config
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
